syntax = "proto3";
package order;
option go_package = "./internal/pb";

service OrderService {
  rpc CreateOrder(CreateRequest) returns (CreateResponse) {}
}

message CreateRequest {
  int64 product_id = 1;
  int64 quantity = 2;
  int64 user_id = 3;
}

message CreateResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}